<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/autoUpdateInterval"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/interval"
            android:textSize="20sp" />

        <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:gravity="right"
	        android:orientation="horizontal" >
        
	        <EditText
	            android:id="@+id/inputInterval"
	            android:layout_width="32dp"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="12dp"
	            android:layout_marginTop="12dp"
	            android:inputType="number" />
	
	        <TextView
	            android:id="@+id/hour"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="4dp"
	            android:layout_marginRight="8dp"
	            android:layout_marginTop="12dp"
	            android:text="@string/hour"
	            android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_article_sort"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/article_sort"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_article_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:textSize="20sp" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_all_read_back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/all_read_back"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_all_read_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_open_internal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:text="@string/open_internal"
            android:textSize="20sp" />

        <CheckBox
            android:id="@+id/cb_open_internal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="12dp"
            android:textSize="20sp" />
    </LinearLayout>
    
    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/save"
        android:textSize="24sp" />

</LinearLayout>