<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/articleListRefresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:drawSelectorOnTop="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/ll_all_read"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="#99CC00"
	        android:layout_weight="1"
	        android:orientation="vertical" >
	         <ImageView
	            android:layout_width="64dp"
	            android:layout_height="64dp"
	            android:layout_gravity="center_horizontal"
	            android:contentDescription="@string/all_read"
	            android:src="@drawable/check" />
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center_horizontal"
	            android:layout_marginBottom="4dp"
				android:textSize="14sp"	            
	            android:text="@string/all_read" />
        </LinearLayout>

        <View
		    android:layout_width="1dp"
		    android:layout_height="88dp"
		    android:background="@android:color/black" />
        
        <LinearLayout
            android:id="@+id/ll_scroll"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="#99CC00"
	        android:layout_weight="1"
	        android:orientation="vertical" >
	         <ImageView
	            android:layout_width="64dp"
	            android:layout_height="64dp"
	            android:layout_gravity="center_horizontal"
	            android:contentDescription="@string/next_page"
	            android:src="@drawable/down" />
	        <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="4dp"
	            android:layout_gravity="center_horizontal"
				android:textSize="14sp"	            
	            android:text="@string/next_page" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/emptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/no_article" />

</LinearLayout>